Fix: log and add footer

--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,15 @@
                 </section>
             </aside>
         </main>
+        
+        <footer class="footer">
+            <div class="footer-content">
+                <p>Made by Phoebe for the Hack Club community</p>
+                <a href="https://github.com/pivilartisant/news-room" target="_blank" rel="noopener noreferrer" class="github-link">
+                    View on GitHub
+                </a>
+            </div>
+        </footer>
     </div>
 
     <script src="script.js"></script>
