--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
         
         <footer class="footer">
             <div class="footer-content">
-                <p>Made by Phoebe for the Hack Club community</p>
+                <a href="https://github/pivilartisant/telecom">Made by Phoebe</a>
                 <a href="https://github.com/pivilartisant/news-room" target="_blank" rel="noopener noreferrer" class="github-link">
                     View on GitHub
                 </a>
